--- a/deploy/dev/kafkaconnect-no-auth.yml
+++ b/deploy/dev/kafkaconnect-no-auth.yml
@@ -198,7 +198,7 @@ objects:
       status.storage.topic: kessel-kafka-connect-cluster-status
       config.providers: secrets
       config.providers.secrets.class: io.strimzi.kafka.KubernetesSecretConfigProvider
-    image: ${KAFKA_CONNECT_IMAGE}
+    image: ${KAFKA_CONNECT_IMAGE}:${IMAGE_TAG}
     replicas: ${{CONNECT_REPLICAS}}
     resources:
       limits:
@@ -228,6 +228,9 @@ parameters:
   - name: KAFKA_CONNECT_IMAGE
     value: "quay.io/redhat-services-prod/project-kessel-tenant/kessel-kafka-connect:latest"
     description: Container image name for the connect cluster pods
+  - name: IMAGE_TAG
+    required: true
+    value: latest
   - name: CONNECT_REPLICAS
     description: Number of replicas in the connect cluster
     value: "1"
