--- a/deploy/kafkaconnect-w-auth.yml
+++ b/deploy/kafkaconnect-w-auth.yml
@@ -204,7 +204,7 @@ objects:
       status.storage.topic: kessel-kafka-connect-cluster-status
       config.providers: secrets
       config.providers.secrets.class: io.strimzi.kafka.KubernetesSecretConfigProvider
-    image: ${KAFKA_CONNECT_IMAGE}
+    image: ${KAFKA_CONNECT_IMAGE}:${IMAGE_TAG}
     replicas: ${{CONNECT_REPLICAS}}
     resources:
       limits:
@@ -244,6 +244,10 @@ parameters:
   - name: KAFKA_CONNECT_IMAGE
     value: "quay.io/redhat-services-prod/project-kessel-tenant/kessel-kafka-connect:latest"
     description: Container image name for the connect cluster pods
+  - name: IMAGE_TAG
+    required: true
+    value: latest
+    description: Image tag for the connect image
   - name: CONNECT_REPLICAS
     description: Number of replicas in the connect cluster
     value: "1"
