fixes connect image def to remove latest off end

--- a/deploy/kafkaconnect-w-auth.yml
+++ b/deploy/kafkaconnect-w-auth.yml
@@ -242,7 +242,7 @@ parameters:
     description: Replication factor for the topic where connector and task status are stored
     value: "1"
   - name: KAFKA_CONNECT_IMAGE
-    value: "quay.io/redhat-services-prod/project-kessel-tenant/kessel-kafka-connect:latest"
+    value: quay.io/redhat-services-prod/project-kessel-tenant/kessel-kafka-connect
     description: Container image name for the connect cluster pods
   - name: IMAGE_TAG
     required: true
