--- a/deploy/kafkaconnect-no-auth.yml
+++ b/deploy/kafkaconnect-no-auth.yml
@@ -226,7 +226,7 @@ parameters:
     description: Replication factor for the topic where connector and task status are stored
     value: "1"
   - name: KAFKA_CONNECT_IMAGE
-    value: "quay.io/redhat-services-prod/project-kessel-tenant/kessel-kafka-connect:latest"
+    value: quay.io/redhat-services-prod/project-kessel-tenant/kessel-kafka-connect
     description: Container image name for the connect cluster pods
   - name: CONNECT_REPLICAS
     description: Number of replicas in the connect cluster
