--- a/deploy/sp-connectors/hbi-outbox-connector.yml
+++ b/deploy/sp-connectors/hbi-outbox-connector.yml
@@ -10,7 +10,7 @@ objects:
     labels:
       strimzi.io/cluster: ${KAFKA_CONNECT_INSTANCE}
   spec:
-    state: stopped
+    state: ${CONNECTOR_STATE}
     class: io.debezium.connector.postgresql.PostgresConnector
     tasksMax: ${{MAX_TASKS}}
     config:
@@ -39,6 +39,9 @@ parameters:
 - name: KAFKA_CONNECT_INSTANCE
   value: kessel-kafka-connect
   description: Name of the target Kafka Connect instance for Connector
+- name: CONNECTOR_STATE
+  description: Defines the state the connector should be deployed in ('stopped', 'running', 'paused' only)
+  value: stopped
 - name: DB_SECRET_NAME
   description: Name of the secret that contains database credentials
   required: true
