--- a/.tekton/kessel-kafka-connect-fedramp-pull-request.yaml
+++ b/.tekton/kessel-kafka-connect-fedramp-pull-request.yaml
@@ -24,7 +24,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/project-kessel-tenant/kessel-kafka-connect:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/project-kessel-tenant/kessel-kafka-connect:on-pr-{{revision}}-fedramp
   - name: image-expires-after
     value: 5d
   - name: dockerfile
