--- a/deploy/kafka-connect-fedramp.yml
+++ b/deploy/kafka-connect-fedramp.yml
@@ -98,24 +98,15 @@ objects:
               command:
               - /bin/sh
               - -c
-              - curl -o /tmp/ca-cert-checker.sh https://raw.githubusercontent.com/anatale/kessel-kafka-connect/refs/heads/main/scripts/heartbeat-fix.sh && chmod +x /tmp/heartbeat-fix.sh && /tmp/heartbeat-fix.sh
+              - curl -o /tmp/ca-cert-checker.sh https://raw.githubusercontent.com/project-kessel/kessel-kafka-connect/refs/heads/main/scripts/ca-cert-checker.sh && chmod +x /tmp/ca-cert-checker.sh && /tmp/ca-cert-checker.sh
               env:
-              - name: SA_CLIENT_ID
-                valueFrom:
-                  secretKeyRef:
-                    name: kessel-sso-sa
-                    key: client-id
-              - name: SA_CLIENT_SECRET
-                valueFrom:
-                  secretKeyRef:
-                    name: kessel-sso-sa
-                    key: client-secret
-              - name: SSO_URL
-                valueFrom:
-                  secretKeyRef:
-                    name: kessel-sso-sa
-                    key: url
-              image: registry.access.redhat.com/ubi9/ubi-minimal
+              - name: WEBHOOK_URL
+                value: ${WEBHOOK_URL}
+              - name: ENV
+                value: ${ENV}
+              - name: KAFKA_BOOTSTRAP_SERVERS
+                value: ${BOOTSTRAP_SERVERS}
+              image: registry.access.redhat.com/ubi9/ubi
               resources:
                 limits:
                   cpu: 200m
@@ -124,7 +115,7 @@ objects:
                   cpu: 100m
                   memory: 384Mi
             restartPolicy: Never
-    schedule: '@hourly'
+    schedule: '@daily'
 parameters:
   - name: BOOTSTRAP_SERVERS
     description: List of bootstrap servers (comma-separated list in 'hostname:port' notation)
@@ -170,3 +161,7 @@ parameters:
   - name: DEBEZIUM_POLL_INTERVAL_MS
     value: "250"
     description: The interval for the Debezium batch processing
+  - name: WEBHOOK_URL
+    description: High side Google Chat Webhook URL for CA Cert Watcher alerts
+  - name: ENV
+    description: Environment where the service is running (int, stage, prod only)
