--- a/deploy/sp-connectors/hbi-hosts-migration-connector.yml
+++ b/deploy/sp-connectors/hbi-hosts-migration-connector.yml
@@ -17,6 +17,7 @@ objects:
     class: io.debezium.connector.postgresql.PostgresConnector
     tasksMax: ${{MAX_TASKS}}
     config:
+      snapshot.mode: always
       slot.name: debezium_hosts
       signal.enabled.channels: "source,kafka"
       signal.kafka.topic: "host-inventory.signal"
