--- a/deploy/kafka-connect-fedramp.yml
+++ b/deploy/kafka-connect-fedramp.yml
@@ -38,11 +38,11 @@ objects:
     replicas: ${{CONNECT_REPLICAS}}
     resources:
       limits:
-        cpu: 1
-        memory: 5Gi
+        cpu: ${{KKC_CPU_LIMIT}}
+        memory: ${{KKC_MEMORY_LIMIT}}
       requests:
-        cpu: 500m
-        memory: 2Gi
+        cpu: ${{KKC_CPU_REQUESTS}}
+        memory: ${{KKC_MEMORY_REQUESTS}}
     template:
       pod:
         imagePullSecrets:
@@ -168,3 +168,15 @@ parameters:
   - name: COMMIT_REF
     description: Git commit ref to specify the git commit version to use for pulling down the ca-cert-checker
     required: true
+  - name: KKC_CPU_LIMIT
+    value: "1000m"
+    description: Sets the CPU limit for Kessel Kafka Connect pod
+  - name: KKC_MEMORY_LIMIT
+    value: "8Gi"
+    description: Sets the memory limit for Kessel Kafka Connect pod
+  - name: KKC_CPU_REQUESTS
+    value: "500m"
+    description: Sets the CPU request for Kessel Kafka Connect pod
+  - name: KKC_MEMORY_REQUESTS
+    value: 3Gi"
+    description: Sets the memory request for Kessel Kafka Connect pod
