--- a/deploy/kafkaconnect-no-auth.yml
+++ b/deploy/kafkaconnect-no-auth.yml
@@ -202,11 +202,11 @@ objects:
     replicas: ${{CONNECT_REPLICAS}}
     resources:
       limits:
-        cpu: 500m
-        memory: 1Gi
+        cpu: ${{KKC_CPU_LIMIT}}
+        memory: ${{KKC_MEMORY_LIMIT}}
       requests:
-        cpu: 250m
-        memory: 512Mi
+        cpu: ${{KKC_CPU_REQUESTS}}
+        memory: ${{KKC_MEMORY_REQUESTS}}
     template:
       pod:
         imagePullSecrets:
@@ -234,3 +234,15 @@ parameters:
   - name: VERSION
     description: Kafka Connect version to use (should match the Kafka version of cluster and connect base image)
     value: "3.9.0"
+  - name: KKC_CPU_LIMIT
+    value: "1000m"
+    description: Sets the CPU limit for Kessel Kafka Connect pod
+  - name: KKC_MEMORY_LIMIT
+    value: "8Gi"
+    description: Sets the memory limit for Kessel Kafka Connect pod
+  - name: KKC_CPU_REQUESTS
+    value: "500m"
+    description: Sets the CPU request for Kessel Kafka Connect pod
+  - name: KKC_MEMORY_REQUESTS
+    value: 3Gi"
+    description: Sets the memory request for Kessel Kafka Connect pod
