--- a/deploy/sp-connectors/hbi-hosts-migration-connector.yml
+++ b/deploy/sp-connectors/hbi-hosts-migration-connector.yml
@@ -16,7 +16,7 @@ objects:
     class: io.debezium.connector.postgresql.PostgresConnector
     tasksMax: ${{MAX_TASKS}}
     config:
-      snapshot.mode: initial
+      snapshot.mode: always
       snapshot.max.threads: 2
       slot.name: debezium_hosts
       signal.enabled.channels: "source,kafka"
