--- a/deploy/sp-connectors/hbi-hosts-migration-connector.yml
+++ b/deploy/sp-connectors/hbi-hosts-migration-connector.yml
@@ -14,7 +14,7 @@ objects:
   spec:
     state: ${CONNECTOR_STATE}
     class: io.debezium.connector.postgresql.PostgresConnector
-    tasksMax: ${{MAX_TASKS}}
+    tasksMax: 1 # source connector only supports 1 task
     config:
       snapshot.mode: ${SNAPSHOT_MODE}
       snapshot.max.threads: 2
@@ -71,9 +71,6 @@ parameters:
 - name: CONNECTOR_STATE
   description: Defines the state the connector should be deployed in ('stopped', 'running', 'paused' only)
   value: stopped
-- name: MAX_TASKS
-  value: "1"
-  description: How many tasks the Kafka Connect instance can create to process this Connector's work
 - name: TOPIC_HEARTBEAT_PREFIX
   value: debezium-heartbeat
   description: Prefix for the connector heartbeat topic
