--- a/deploy/sp-connectors/hbi-outbox-connector.yml
+++ b/deploy/sp-connectors/hbi-outbox-connector.yml
@@ -12,7 +12,7 @@ objects:
   spec:
     state: ${CONNECTOR_STATE}
     class: io.debezium.connector.postgresql.PostgresConnector
-    tasksMax: ${{MAX_TASKS}}
+    tasksMax: 1 # source connector only supports 1 task
     config:
       slot.name: debezium_outbox
       snapshot.mode: "no_data"
@@ -45,9 +45,6 @@ parameters:
 - name: DB_SECRET_NAME
   description: Name of the secret that contains database credentials
   required: true
-- name: MAX_TASKS
-  value: "1"
-  description: How many tasks the Kafka Connect instance can create to process this Connector's work
 - name: TOPIC_HEARTBEAT_PREFIX
   value: debezium-heartbeat
   description: Prefix for the connector heartbeat topic
