RHCLOUD-43059: updates to KKC pdb and default scaling (#71)
* updates to KKC pdb and default scaling

* updates max tasks to hard coded value and removes paramter

--- a/deploy/kafkaconnect-w-auth.yml
+++ b/deploy/kafkaconnect-w-auth.yml
@@ -73,6 +73,8 @@ objects:
         volumeMounts:
         - name: log4j-config
           mountPath: /mnt/log4j
+      podDisruptionBudget:
+        maxUnavailable: 2
     version: ${VERSION}
 
 - apiVersion: kafka.strimzi.io/v1beta2
@@ -83,7 +85,7 @@ objects:
       strimzi.io/cluster: ${KAFKA_CONNECT_INSTANCE}
   spec:
     class: io.debezium.connector.postgresql.PostgresConnector
-    tasksMax: ${{MAX_TASKS}}
+    tasksMax: 1 # source connector only supports 1 task
     state: ${CONNECTOR_STATE}
     config:
       database.server.name: kessel-inventory-db
@@ -129,7 +131,7 @@ parameters:
     description: Image tag for the connect image
   - name: CONNECT_REPLICAS
     description: Number of replicas in the connect cluster
-    value: "1"
+    value: "3"
   - name: VERSION
     description: Kafka Connect version to use (should match the Kafka version of cluster and connect base image)
     value: "3.9.0"
@@ -139,9 +141,6 @@ parameters:
   - name: KAFKA_CONNECT_INSTANCE
     value: kessel-kafka-connect
     description: Name of the target Kafka Connect instance for Connector
-  - name: MAX_TASKS
-    value: "1"
-    description: How many tasks the Kafka Connect instance can create to process this Connector's work
   - name: TOPIC_HEARTBEAT_PREFIX
     value: debezium-heartbeat
     description: Prefix for the connector heartbeat topic
